[gd_scene load_steps=17 format=3 uid="uid://bhm036y48wb0r"]

[ext_resource type="Texture2D" uid="uid://dc7firvjc1fi5" path="res://assets/froggy-green.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://3g6ruh7ysnqg" path="res://scenes/tongue_origin.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://ftib1yrmuxpe" path="res://assets/background.png" id="1_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cjlfp7qvelqm7" path="res://scenes/tongue_body.tscn" id="2_sugp2"]
[ext_resource type="Script" uid="uid://drfpd6m0snt6n" path="res://scenes/consume.gd" id="3_tbgi4"]
[ext_resource type="Script" uid="uid://bpr58yirrkkod" path="res://scenes/spawner.gd" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://dy1va4e5m4eae" path="res://scenes/hunger_bar.gd" id="6_tefeu"]
[ext_resource type="Script" uid="uid://rj2rfj1tbd8a" path="res://scenes/ui.gd" id="7_tipki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6xl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jyhfs"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = ExtResource("1_0xm2m")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquwl"]
atlas = ExtResource("1_0xm2m")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("1_0xm2m")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("1_0xm2m")
region = Rect2(48, 128, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5vw27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Main" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
offset_left = -21.0
offset_top = -24.0
offset_right = 357.0
offset_bottom = 221.0
texture = ExtResource("1_o6xl0")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -14.0
offset_top = 11.0
offset_right = 26.0
offset_bottom = 51.0
script = ExtResource("7_tipki")

[node name="HungerBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
modulate = Color(0.352941, 0.709804, 0.435294, 1)
layout_mode = 0
offset_left = 330.0
offset_top = 141.0
offset_right = 478.0
offset_bottom = 153.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxEmpty_o6xl0")
theme_override_styles/fill = SubResource("StyleBoxFlat_tipki")
step = 1.0
value = 100.0
show_percentage = false
script = ExtResource("6_tefeu")

[node name="Timer" type="Timer" parent="UI/HungerBar"]
autostart = true

[node name="GameOver" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = -36.0
offset_right = 337.0
offset_bottom = 150.0
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 331.0
offset_top = 140.0
offset_right = 371.0
offset_bottom = 163.0
text = "0"

[node name="Messages" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 39.0
offset_right = 168.0
offset_bottom = 62.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TongueOrigin" type="Node2D" parent="."]
position = Vector2(170, 166)
script = ExtResource("1_jyhfs")

[node name="TongueBody" parent="TongueOrigin" instance=ExtResource("2_sugp2")]
position = Vector2(0, 5)

[node name="Consume" type="Area2D" parent="TongueOrigin"]
script = ExtResource("3_tbgi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueOrigin/Consume"]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jyhfs")

[node name="FrogSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(170, 157)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_5vw27")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.489672

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("5_tbgi4")

[node name="Marker2D" type="Marker2D" parent="Spawner"]
position = Vector2(-26, -33)

[node name="Marker2D3" type="Marker2D" parent="Spawner"]
position = Vector2(-22, 115)

[node name="Marker2D5" type="Marker2D" parent="Spawner"]
position = Vector2(336, -27)

[node name="Marker2D7" type="Marker2D" parent="Spawner"]
position = Vector2(365, 102)

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 1.5
autostart = true

[connection signal="hunger_depleted" from="UI/HungerBar" to="TongueOrigin/Consume" method="_on_hunger_bar_hunger_depleted"]
[connection signal="timeout" from="UI/HungerBar/Timer" to="UI/HungerBar" method="_on_timer_timeout"]
[connection signal="body_entered" from="TongueOrigin/Consume" to="TongueOrigin/Consume" method="_on_body_entered"]
[connection signal="total_flys_consumed" from="TongueOrigin/Consume" to="UI" method="_on_consume_total_flys_consumed"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
